# gwcelery

./: .gitlab-ci.yml  CHANGES.rst  Pipfile  pyproject.toml  requirements.txt  setup.cfg
doc/: conf.py  gwcelery.tasks.orchestrator.rst
gwcelery/: views.py
gwcelery/conf/: __init__.py  playground.py
gwcelery/data/first2years_bursts/: olib_data.json  trigger_test.txt
gwcelery/tasks/: bayestar.py  bayeswave.py  detchar.py  external_triggers.py  first2years.py  first2years_bursts.py  gracedb.py  inference.py  lalinference.py  ligo_fermi_skymaps.py  ligo_swift_skymaps.py  orchestrator.py  raven.py  skymaps.py  superevents.py
gwcelery/templates/: bayeswave.jinja2  online_pe.jinja2
gwcelery/tests/: conftest.py  test_tasks_bayestar.py  test_tasks_external_triggers.py  test_tasks_first2years_bursts.py  test_tasks_gracedb.py  test_tasks_ligo_swift_skymaps.py  test_tasks_orchestrator.py  test_tasks_raven.py  test_tasks_superevents.py  test_views.py
gwcelery/tests/data/: S190425z_events.json
systemd/: README.rst  gwcelery-beat.service  gwcelery-flask.service  gwcelery-flower.service  gwcelery-redis.service  gwcelery.service
