[aliases]
test=pytest

[coverage:run]
source = gwcelery
omit =
    gwcelery/tests/*
    gwcelery/conf/development.py
    gwcelery/conf/playground.py
    gwcelery/conf/production.py
    gwcelery/conf/test.py
parallel = True
concurrency =
    thread
    multiprocessing

[flake8]
exclude =
    gwcelery/_version.py
    versioneer.py
ignore = W503,W504,D100,D101,D102,D103,D104,D107,D205,D400,D401,D403,E126

[metadata]
long_description = file:README.rst
long_description_content_type = text/x-rst
project_urls =
    Bug Tracker = https://git.ligo.org/emfollow/gwcelery/issues
    Documentation = https://gwcelery.readthedocs.io/
    Source Code = https://git.ligo.org/emfollow/gwcelery

[options.entry_points]
celery.commands =
    condor = gwcelery.tools.condor:CondorCommand
    flask = gwcelery.tools.flask:FlaskCommand
    nagios = gwcelery.tools.nagios:NagiosCommand

[options.package_data]
gwcelery = static/*.css, templates/*.jinja2, data/*.sub, data/first2years/2016/*.xml.gz
gwcelery.tests = data/*.html, data/*.json, data/*.xml, data/*.xml.gz, data/llhoft/*/*.gwf, data/llhoft/*/*/*.gwf, data/*.pickle, data/*.hdf5
